--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ add_executable(mount.myfs src/blockdevice.cpp
         src/myinmemoryfs.cpp
         src/myondiskfs.cpp
         src/wrap.cpp
-        src/mount.myfs.c)
+        src/mount.myfs.c src/File.cpp includes/File.h)
 
 add_executable(unittests src/blockdevice.cpp
         src/myfs.cpp
@@ -26,7 +26,7 @@ add_executable(unittests src/blockdevice.cpp
         testing/main.cpp
         testing/utest-blockdevice.cpp
         testing/utest-myfs.cpp
-        testing/tools.cpp testing/itest.cpp)
+        testing/tools.cpp testing/itest.cpp src/File.cpp includes/File.h)
 
 add_executable(integrationtests
         src/blockdevice.cpp
@@ -35,7 +35,7 @@ add_executable(integrationtests
         src/myondiskfs.cpp
         testing/main.cpp
         testing/itest.cpp
-        testing/tools.cpp)
+        testing/tools.cpp src/File.cpp includes/File.h)
 
 find_package(PkgConfig)
 pkg_check_modules(FUSE fuse)
